--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'tailwindcss';
-
-/* Defined customer palette for tailwind */
-@theme inline {
-  --color-beige-100: #f8f4f0;
-  --color-beige-500: #98908b;
-  --color-grey-100: #f2f2f2;
-  --color-grey-300: #b3b3b3;
-  --color-grey-500: #696868;
-  --color-grey-900: #201f24;
-  --color-green-500: #277c78;
-  --color-green-700: #7f9161;
-  --color-navy-500: #97a0ac;
-  --color-yellow: #f2cdac;
-  --color-purple-300: #af81ba;
-  --color-purple-500: #826cb0;
-  --color-navy-700: #626070;
-  --color-cyan: #82c9d7;
-  --color-red: #c94736;
-  --color-turquoise: #597c7c;
-  --color-brown: #93674f;
-  --color-magenta: #934f6f;
-  --color-blue: #3f82b2;
-  --color-gold: #cab361;
-  --color-orange: #be6c49;
-}
+@import './styles/theme.css';
